improvement/login: memperbaharui tampilan sign in dan sign up

--- a/css/style.css
+++ b/css/style.css
@@ -169,11 +169,11 @@ body {
 
 .toggle {
     position: relative;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:;
     font-size: 2.5rem;
     cursor: pointer;
 }
