--- a/css/login.css
+++ b/css/login.css
@@ -1,134 +1,258 @@
-@import url('https://fonts.googleapis.com/css2?family=Tenor+Sans&display=swap');
-
-body{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body{
+    background-color: #FFF3EC;
+    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+}
+.container .sign-in h1{
+    font-family:"Poppins", sans-serif;
+    color:#74512D;
+    font-size: 45px;
+}
+.container .sign-up h1{
+    font-family:"Poppins", sans-serif;
+    color:#74512D;
+    margin-left:10px;
+    font-size: 45px;
+}
+.container{
+    background-color: #FFF3EC;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    /* max-width: 100%; */
     height: 100%;
 }
 
-.half {
+.container .sign-in p{
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.3px;
+    margin: 20px 0;
+    color:#74512D;
+}
+.container .sign-up p{
+    font-family:"Poppins", sans-serif;
+    color:#74512D;
+    margin-left:120px;
+}
+.container span{
+    font-family:"Poppins", sans-serif;
+    font-size: 12px;
+    color:#74512D;
+}
+.container .sign-up span{
+    font-family:"Poppins", sans-serif;
+    font-size: 11.5px;
+    color:#74512D;
+    margin-left:10px;
+    text-align:left;
+    
+}
+.container a{
+    color:#74512D;
+    font-size: 13px;
+    text-decoration: none;
+    margin: 15px 0 10px;
+}
+
+.container button{
+    background-color: #74512D;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+    width:150px;
+}
+.container .sign-up button{
+    background-color: #74512D;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+    width:150px;
+    align-items:right;
+    margin-left: 215px;
+}
+.container button.hidden{
+    background-color: transparent;
+    border-color: #fff;
+}
+
+.container form{
+    background-color: #FFF3EC;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    height: 100%;
+    margin-left:80px;
+}
+.container .sign-up form{
+    background-color: #FFF3EC;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    height: 100%;
+    margin-left: 120px;
+}
+.container input{
+    background-color:rgba(116, 81, 45, 0.3);
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 50%;
+    outline: none;
+}
+.container .sign-up input{
+    background-color:rgba(116, 81, 45, 0.3);
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 65%;
+    outline: none;
+    margin-left: 50px;
+}
+.form-container{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+
+.sign-in{
+    left: 0;
+    width: 50%;
+    z-index: 2;
+}
+
+.container.active .sign-in{
+    transform: translateX(100%);
+}
+
+.sign-up{
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+}
+
+.container.active .sign-up{
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: move 0.6s;
+}
+
+@keyframes move{
+    0%, 49.99%{
+        opacity: 0;
+        z-index: 1;
+    }
+    50%, 100%{
+        opacity: 1;
+        z-index: 5;
+    }
+}
+
+
+.toggle-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 0.6s ease-in-out;
+    border-radius: 150px 0 0 100px;
+    background: #e0e0e0;
+    box-shadow:  20px -20px 60px #bebebe,-20px 20px 60px #000000;
+    z-index: 1000;
+}
+
+.container.active .toggle-container{
+    transform: translateX(-100%);
+    border-radius: 0 150px 100px 0;
+    background: #e0e0e0;
+    box-shadow:  -20px -20px 60px #bebebe,20px 20px 60px #000000;
+}
+
+.toggle{
+    background-color: #74512D;
+    height: 100%;
+    background: linear-gradient(to right, #74512D);
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.container.active .toggle{
+    transform: translateX(50%);
+}
+
+.toggle-panel{
     position: absolute;
     width: 50%;
     height: 100%;
-}
-
-.left {
-    left: 0;
-    background-color: #F1F8E8;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
-.left img{
-    max-width:80%;
-    height:auto;
-}
-.half.left {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 30px;
+    text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
 }
 
-.half.left img {
-    max-width: 100%; 
+.toggle-left{
+    transform: translateX(-200%);
 }
 
-.half.left h1 {
-    margin-top: 10px; 
-    text-align: center; 
-    color: #95D2B3;
-    font-family: "Tenor Sans", sans-serif;
+.container.active .toggle-left{
+    transform: translateX(0);
 }
 
-.right {
+.toggle-right{
     right: 0;
-    background-color: #439786;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center
-}
-.right h1{
-    color:white;
-    margin-bottom: 20px;
-    font-family: "Tenor Sans", sans-serif;
+    transform: translateX(0);
 }
 
-form {
-    margin-top: 20px;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    position: relative; 
-}
-
-form label {
-    margin-bottom: 8px;
-    color: #C0C0C0;
-    position: absolute;
-    margin-right: 10px;
-    margin-left: 35px;
-    margin-top:25px;
-    transition: opacity 0.3s; 
-    opacity: 0.5; 
-}
-
-form input {
-    width: 250px; 
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-left:25px;
-    margin-top:25px;
-}
-
-form .input-group {
-    display: flex;
-    align-items: center;
-    margin:0 auto;
-}
-
-form .input-group input {
-    margin-right: 20px;
-}
-
-form button[type="submit"] {
-    width: auto; 
-    padding: 8px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.4);
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-family: "Tenor Sans", sans-serif;
-}
-
-form button[type="submit"]:hover {
-    background-color: #555;
-}
-
-form button#togglePassword {
-    width: auto; 
-    padding: 8px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 30px;
-    background-color: rgba(255, 255, 255, 0.4);
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-family: "Tenor Sans", sans-serif;
-}
-
-form button#togglePassword:hover {
-    background-color: #555;
+.container.active .toggle-right{
+    transform: translateX(200%);
 }
