--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 :root {
     --blue: #74512D;
-    --white: #fff;
+    --white: #FFF3EC;
     --gray: #f5f5f5;
     --black1: #222;
     --black2: #999;
@@ -168,14 +168,156 @@ body {
 }
 
 .toggle {
-    position: relative;
-    width: 40px;
-    height: 40px;
+    position: fixed;
+    width: 60px;
+    height: 60px;
     display: flex;
     justify-content: center;
-    align-items:;
+    align-items: center;
     font-size: 2.5rem;
     cursor: pointer;
+}
+
+.main-container {
+    /* background-color: rgb(154, 154, 154); */
+    max-width: auto;
+    margin: 0 auto;
+    padding-left: 70px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+
+.container {
+    /* background-color: blue; */
+    max-width: auto;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.card-container {
+    /* background-color: blue; */
+    display: grid;
+    padding: 20px;
+    height: auto;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.card {
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    flex: 1;
+    border-radius: 5px;
+    /* Blue border */
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.card-content {
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+}
+
+.card-header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
+
+.card-icon {
+    width: 30px;
+    height: 30px;
+}
+
+.card-body {
+    margin-top: 10px;
+}
+
+.card-number {
+    font-size: 2.5em;
+    margin: 0;
+}
+
+.card-change {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: -50px;
+}
+
+.card-date {
+    font-size: 11pt;
+}
+
+.change-percentage {
+    background-color: rgba(116, 87, 70, 0.5);
+    color: #74512D;
+    border-radius: 5px;
+    padding: 5px;
+    margin-right: 5px;
+}
+
+
+.cards-and-chart {
+    /* background-color: green; */
+    width: 1000px;
+    display: grid;
+    grid-template-rows: auto auto;
+    gap: 20px;
+}
+
+.container-chart {
+    /* background-color: blue; */
+    padding: 20px;
+}
+
+.cards-calendar {
+    /* background-color: red; */
+    display: grid;
+    padding-top: 30px;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.card {
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    border-radius: 10px;
+}
+
+.card h3 {
+    margin: 0 0 10px 0;
+}
+
+.chart-container {
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.container-calendar {
+    /* background-color: pink; */
+    padding: 20px;
+    height: 400px;
+}
+
+.calendar-container {
+    background-color: #fff;
+    padding: 20px;
+    height: 360px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+h2 {
+    text-align: center;
 }
 
 /* ====================== Responsive Design ========================== */
