--- a/css/books.css
+++ b/css/books.css
@@ -159,39 +159,13 @@ body {
 }
 
 .topbar {
+    position: absolute;
     width: 100%;
     height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 10px;
-}
-
-.header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-left {
-    display: flex;
-    flex-direction: column;
-}
-
-.header-right {
-    margin-right: 20px;
-    display: flex;
-    align-items: center;
-}
-
-.notification-icon {
-    padding: 10px;
-    border-radius: 50%;
-}
-
-.notification-icon img {
-    width: 24px;
-    height: 24px;
 }
 
 .toggle {
@@ -205,158 +179,151 @@ body {
     cursor: pointer;
 }
 
+/* ====================== Books ========================== */
+
 .main-container {
-    /* background-color: rgb(154, 154, 154); */
-    max-width: auto;
-    margin: 0 auto;
-    padding-left: 70px;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
+    margin: 20px;
 }
 
-.container {
-    /* background-color: blue; */
-    max-width: auto;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-}
-
-.card-container {
-    /* background-color: blue; */
-    display: grid;
+.books-container {
+    background-color: #ffffff;
     padding: 20px;
-    height: auto;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-.card {
+.inventory-container {
+    max-width: 1200px;
+    margin: 0 auto;
     background-color: #fff;
     padding: 20px;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    flex: 1;
-    border-radius: 5px;
-    /* Blue border */
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
-.card-content {
-    /* background-color: red; */
-    display: flex;
-    flex-direction: column;
-}
-
-.card-header {
+.inventory-header {
     display: flex;
     justify-content: space-between;
-    width: 100%;
     align-items: center;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    padding-right: 20px;
+    padding-left: 80px;
 }
 
-.card-icon {
+.menu-icon img {
     width: 30px;
     height: 30px;
 }
 
-.card-body {
-    margin-top: 10px;
-}
-
-.card-number {
-    font-size: 2.5em;
+h1 {
+    color: #74512D;
     margin: 0;
 }
 
-.card-change {
+.search-container {
+    z-index: 1;
     display: flex;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: -50px;
+    padding-left: 5px;
+    padding-right: 10px;
+    border-radius: 15px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-.card-date {
-    font-size: 11pt;
+.search-container input {
+    padding: 10px;
+    padding-right: 100px;
+    padding-left: 20px;
+    border: none;
+    outline: none;
 }
 
-.change-percentage {
-    background-color: rgba(116, 87, 70, 0.5);
-    color: #74512D;
-    border-radius: 5px;
-    padding: 5px;
-    margin-right: 5px;
-}
-
-
-.cards-and-chart {
-    /* background-color: green; */
-    width: 1000px;
-    display: grid;
-    grid-template-rows: auto auto;
-    gap: 20px;
-}
-
-.container-chart {
-    /* background-color: blue; */
-    padding: 20px;
-}
-
-.cards-calendar {
-    /* background-color: red; */
-    display: grid;
-    padding-top: 30px;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-}
-
-.card {
+.search-container .search-button {
     background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
-    text-align: center;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+
+}
+
+.search-container .search-button img {
+    width: 20px;
+    height: 20px;
+}
+
+.category-filter {
+    z-index: 1;
+}
+
+.category-filter select {
+    padding: 10px;
+    padding-right: 50px;
     border-radius: 10px;
+    outline: none;
+    border: 1px solid #ddd;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-.card h3 {
-    margin: 0 0 10px 0;
-}
-
-.chart-container {
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-}
-
-.container-calendar {
-    /* background-color: pink; */
-    padding: 20px;
-    height: 400px;
-}
-
-.calendar-container {
-    background-color: #fff;
-    padding: 20px;
-    height: 360px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-}
-
-h2 {
-    text-align: center;
-}
-
-.success {
-    background-color: #4CAF50;
-    /* Green */
-    color: white;
-    padding: 15px;
-    margin: 10px 0;
+.add-book-button {
+    background-color: #ffffff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    color: #74512D;
+    padding: 10px 20px;
+    border: none;
     border-radius: 5px;
-    text-align: center;
+    cursor: pointer;
+    margin-bottom: 20px;
+    font-size: medium;
+    font-weight: bold;
 }
 
+.books-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.books-table th,
+.books-table td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.books-table th {
+    background-color: #f9f9f9;
+}
+
+.books-table tr:hover {
+    background-color: #f1f1f1;
+}
+
+.category-label {
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: white;
+}
+
+.category-label.fiction {
+    background-color: #4CAF50;
+}
+
+.category-label.dystopian {
+    background-color: #FF5722;
+}
+
+.category-label.classic {
+    background-color: #FFC107;
+}
+
+.category-label.adventure {
+    background-color: #00BCD4;
+}
+
+.category-label.romance {
+    background-color: #E91E63;
+}
 
 
 /* ====================== Responsive Design ========================== */
