--- a/css/loans.css
+++ b/css/loans.css
@@ -228,7 +228,7 @@ body {
     width: 140px;
     height: 40px;
     background: var(--blue);
-    box-shadow: 3px -3px 5px #, -3px 3px 5px #bebebe;
+    box-shadow: -3px 3px 5px #bebebe;
     margin-left: 30px;
     display: flex;
     justify-content: center;
